feat(server): implement post and get endpoints
